Update and rename bluecup_78k_lan 2.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <title>BlueCup · INFODOSE LAN Explorer (Cards)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#00d8d8" />
+<!-- Se o arquivo estiver na raiz, deixa só "manifest.webmanifest" -->
+  <link rel="manifest" href="./manifest.webmanifest">
+
+  <!-- Ícone principal (favicon / atalho) -->
+  <!-- Aqui entra teu ícone 192x192 -->
+  <link rel="icon" type="image/png" sizes="192x192" href="./icons/icon-192.png">
+
+  <!-- Ícone para iOS (pode ser 180x180, mas 192 também funciona bem) -->
+  <link rel="apple-touch-icon" href="./icons/icon-192.png">
+
 
   <style>
     :root {
